# beverage_dispenser

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run-tests.sh  server.sh
beverage_dispenser/: __init__.py
beverage_dispenser/constants/: base_models.py  env.py  sample_input.json  sample_input1.json  sample_input2.json  sample_input3.json
beverage_dispenser/controllers/: dispenser.py
beverage_dispenser/middlewares/: initializer_middleware.py
beverage_dispenser/providers/: mongo.py
beverage_dispenser/routers/: router.py
beverage_dispenser/services/: combination_generator.py.bak  combinations_generator.py  dispenser_service.py  dispenser_service.py.bak  permutations_generator.py
docs/: getting-started.md  testing.md
tests/: test_beverage_dispenser.py
