[tool.poetry]
name = "beverage-dispenser"
version = "0.1.0"
description = ""
authors = ["Chalukya J <chalukyaj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.4"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
ipython = "^7.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
